Arreglados errores color vistas errormodificarfecha y tabla cubrir24horas

--- a/Proyecto1/WebContent/InicioCRUD.html
+++ b/Proyecto1/WebContent/InicioCRUD.html
@@ -33,7 +33,7 @@ $(document).ready(function() {
 </form>
 
 <form name="formulario4" method="get" action="indexModificarFecha1.html">
-<input id="Buscar" class="boton" type="button" value="Cubrir24horas" name="botonCubrir24horas"/> 
+<input id="Cubrir24horas" class="boton" type="button" value="Cubrir24horas" name="botonCubrir24horas"/> 
 </form>
 
 <form name="formulario5" method="get" action="indexListadobomberos.html">
