todos los archivos en sus carpetas, dejo los html sueltos en la carpeta WebContent para tenerlos más a mano y visibles

--- a/Proyecto1/WebContent/indexModificarFecha1.html
+++ b/Proyecto1/WebContent/indexModificarFecha1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="EstiloModificarFecha.css">
+<link rel="stylesheet" type="text/css" href="cssCubrir/EstiloModificarFecha.css">
 <script type="text/javascript" src="js/inicioCrud.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
@@ -17,7 +17,7 @@ $(document).ready(function() {
 <title>Insert title here</title>
 </head>
 <body>
-<h1>Formulario Modificar Fecha</h1><br/>
+<h1>Formulario Modificar Fecha cubrir 24 horas</h1><br/>
 
 	<!-- El action sera el servlet(controlador) al que vamos a ir -->	
 	<form action="ControladorModificarFecha1" method="get">
