--- a/Proyecto1/WebContent/indexListadobomberos1.html
+++ b/Proyecto1/WebContent/indexListadobomberos1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="EstiloListadoBomberos1.css">
+<link rel="stylesheet" type="text/css" href="cssCubrir/EstiloListadoBomberos1.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript">
