corregido el color de la ultima fila de la tabla cubir 24 horas

--- a/Proyecto1/WebContent/indexAltabombero.html
+++ b/Proyecto1/WebContent/indexAltabombero.html
@@ -45,7 +45,7 @@ $(document).ready(function() {
 		</select>		
 		<br/><br/>
 		
-		Nombre: <input type="text" name="nombre"/>
+		Nombre: <input type="text" size="45" name="nombre"/>
 		<br/><br/>
 		
 		<input id="Alta" class="boton" type="submit" value="alta"/>
