cambiado primera letra en mayusculas del los botones del CRUD

--- a/Proyecto1/WebContent/indexAltabombero.html
+++ b/Proyecto1/WebContent/indexAltabombero.html
@@ -48,7 +48,7 @@ $(document).ready(function() {
 		Nombre: <input type="text" size="45" name="nombre"/>
 		<br/><br/>
 		
-		<input id="Alta" class="boton" type="submit" value="alta"/>
+		<input id="Alta" class="boton" type="submit" value="Alta"/>
 		<input id="Limpiar" class="boton" type="reset" value="Limpiar"/>
 		<br/><br/>
 		</form>	
