--- a/Proyecto1/WebContent/indexBajabombero.html
+++ b/Proyecto1/WebContent/indexBajabombero.html
@@ -33,7 +33,7 @@ $(document).ready(function() {
     	Idbombero: <input type="number" name="idbombero" value=0>
 		<br/><br/><br/>
 				
-		<input id="baja" class="boton" type="button" value="baja" onclick="baja()"/>
+		<input id="baja" class="boton" type="button" value="Baja" onclick="baja()"/>
 		<input id="Limpiar" class="boton" type="reset" value="Limpiar"/>
 		<br/><br/>
 	</form>
