--- a/Proyecto1/WebContent/indexBuscarbombero.html
+++ b/Proyecto1/WebContent/indexBuscarbombero.html
@@ -24,7 +24,7 @@ $(document).ready(function() {
     	Idbombero: <input type="number" name="idbombero" value=0>
 		<br/><br/>
 				
-		<input id="buscar" class="boton" type="submit" value="buscar"/>
+		<input id="buscar" class="boton" type="submit" value="Buscar"/>
 		<input id="Limpiar" class="boton" type="reset" value="Limpiar"/>
 		<br/><br/>
 	</form>
