--- a/Proyecto1/WebContent/indexModificarbombero1.html
+++ b/Proyecto1/WebContent/indexModificarbombero1.html
@@ -24,7 +24,7 @@ $(document).ready(function() {
     	Idbombero: <input type="number" name="idbombero" value=0>
 		<br/><br/>
 		
-		<input id="modificar" class="boton" type="submit" value="modificar"/>
+		<input id="modificar" class="boton" type="submit" value="Modificar"/>
 		<input id="Limpiar" class="boton" type="reset" value="Limpiar"/>
 		<br/><br/>
 		
